# rq

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
.planning/: ROADMAP.md  STATE.json
.planning/plans/: phase-1.1.md  phase-1.2.md
src/: main.rs
src/evaluator/: mod.rs
src/operators/: add.rs  alternative.rs  arithmetic.rs  array.rs  assign.rs  comma.rs  comparison.rs  env.rs  field_access.rs  filter.rs  first.rs  flatten.rs  group_by.rs  has.rs  index_access.rs  iterator.rs  keys.rs  last.rs  length.rs  logical.rs  map.rs  mod.rs  object.rs  pipe.rs  recurse.rs  reverse.rs  select.rs  slice.rs  sort.rs  tonumber.rs  tostring.rs  type_op.rs  unique.rs  update.rs
src/output/: mod.rs
src/parser/: expression.rs  input.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: sample.json  sample.toml  sample.yaml
