[package]
name = "rq-cli"
version = "0.1.3"
edition = "2024"
authors = ["Saorsa Labs <david@saorsalabs.com>"]
description = "A lightweight and portable command-line YAML, JSON, and TOML processor with jq-like syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saorsa-labs/rq"
keywords = ["yaml", "json", "toml", "cli", "query"]
categories = ["command-line-utilities", "parser-implementations"]
rust-version = "1.85"

[[bin]]
name = "rq"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# YAML support
serde_yaml = "0.9"

# JSON support
serde_json = "1.0"

# TOML support
toml = { version = "0.8", features = ["parse", "display"] }

# Core serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Colored output
colored = "3.0"

# Regex for pattern matching
regex = "1.11"

# IndexMap for preserving order
indexmap = "2.7"

[dev-dependencies]
tempfile = "3.16"
pretty_assertions = "1.4"
cargo-tarpaulin = "0.31"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
